{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 11,
  "lineage": "9b875360-f19c-cab6-392c-b8fe3b097dae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063418e3b5c2a9c60",
            "domain": "vpc",
            "id": "eipalloc-063418e3b5c2a9c60",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-74-0-106.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.0.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:583472615724:internet-gateway/igw-0e49254a2feb11456",
            "id": "igw-0e49254a2feb11456",
            "owner_id": "583472615724",
            "vpc_id": "vpc-019905aa70b86c59e"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063418e3b5c2a9c60",
            "connectivity_type": "public",
            "id": "nat-0e51ef0e69ba39030",
            "network_interface_id": "eni-095ed03f6dd1c1d85",
            "private_ip": "10.0.0.174",
            "public_ip": "52.74.0.106",
            "subnet_id": "subnet-0914b7680788b6073"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:583472615724:route-table/rtb-095c418772e593a0b",
            "id": "rtb-095c418772e593a0b",
            "owner_id": "583472615724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e51ef0e69ba39030",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019905aa70b86c59e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:583472615724:route-table/rtb-08d23dd41590c80fb",
            "id": "rtb-08d23dd41590c80fb",
            "owner_id": "583472615724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e49254a2feb11456",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019905aa70b86c59e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0890b4bcd2806d813",
            "route_table_id": "rtb-095c418772e593a0b",
            "subnet_id": "subnet-0c138b1f3738e104d"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7842b93534b4e8c",
            "route_table_id": "rtb-08d23dd41590c80fb",
            "subnet_id": "subnet-0914b7680788b6073"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:583472615724:subnet/subnet-0c138b1f3738e104d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c138b1f3738e104d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583472615724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019905aa70b86c59e"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:583472615724:subnet/subnet-0914b7680788b6073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0914b7680788b6073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "583472615724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-019905aa70b86c59e"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:583472615724:vpc/vpc-019905aa70b86c59e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0fe3a91696b0f3d33",
            "default_route_table_id": "rtb-066808ab1bc36dbe0",
            "default_security_group_id": "sg-0f2d2f3c2127f17c0",
            "dhcp_options_id": "dopt-043497f7df39cfcf3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-019905aa70b86c59e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066808ab1bc36dbe0",
            "owner_id": "583472615724"
          }
        }
      ]
    }
  ]
}